<resources>
    <string name="app_name">MakaoFit</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="get_started">Get started</string>
    <string name="height">Height</string>
    <string name="height_edit">Height(m):</string>
    <string name="weight">Weight</string>
    <string name="weight_edit">Weight(kg):</string>
    <string name="email">Email</string>
    <string name="email_hint">aaa@gmail.com</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="logout">Logout</string>
    <string name="gender">Gender</string>
    <string name="save_button">Save</string>
    <string name="callories">Callories:</string>
    <string name="distance">Distance:</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="current">Current</string>
    <string name="kilometers">Km</string>
    <string name="kkal">Kcal</string>
    <string name="steps">Steps</string>
    <string name="enter_your_weight">Enter your weight (kg)</string>
    <string name="enter_your_height">Enter your height (m)</string>
    <string name="the_weight_is_incorrect">The weight is incorrect</string>
    <string name="the_height_is_incorrect">The height is incorrect</string>
    <string name="skip">Skip</string>
    <string name="goal">Goal</string>
    <string name="_0_0">0/0%</string>
    <string name="goal_progress">Goal/Progress</string>
</resources>
